[gd_scene load_steps=9 format=3 uid="uid://c6ncpivtk2bkq"]

[ext_resource type="Script" path="res://Scripts/laser.gd" id="1_c86p3"]
[ext_resource type="Material" uid="uid://irawxusxr2qf" path="res://Settings/laser.tres" id="2_8eodj"]
[ext_resource type="Texture2D" uid="uid://dkmbbbomkkuju" path="res://Sprites/Circle.svg" id="3_jmdw6"]
[ext_resource type="Material" uid="uid://bfqooqq2yc2u2" path="res://Settings/laser2.tres" id="4_7v5du"]
[ext_resource type="AudioStream" uid="uid://brxpoxc5ojb17" path="res://Sound/laser.wav" id="5_e8n32"]

[sub_resource type="Animation" id="Animation_jh8k2"]
resource_name = "Fire"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LineColor:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 5.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"return_self"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LineWhite:width")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 3.0, 0.0]
}

[sub_resource type="Animation" id="Animation_bpn31"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LineColor:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LineWhite:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xikti"]
_data = {
"Fire": SubResource("Animation_jh8k2"),
"RESET": SubResource("Animation_bpn31")
}

[node name="Laser" type="Node2D"]
script = ExtResource("1_c86p3")

[node name="LineColor" type="Line2D" parent="."]
width = 5.0

[node name="LineWhite" type="Line2D" parent="."]
width = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xikti")
}

[node name="GPUParticles1" type="GPUParticles2D" parent="."]
light_mask = 0
emitting = false
amount = 60
process_material = ExtResource("2_8eodj")
texture = ExtResource("3_jmdw6")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(-50, -50, 100, 100)

[node name="GPUParticles2" type="GPUParticles2D" parent="."]
light_mask = 0
emitting = false
amount = 60
process_material = ExtResource("2_8eodj")
texture = ExtResource("3_jmdw6")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(-50, -50, 100, 100)

[node name="GPUParticles3" type="GPUParticles2D" parent="."]
light_mask = 0
emitting = false
amount = 40
process_material = ExtResource("4_7v5du")
texture = ExtResource("3_jmdw6")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(-50, -50, 100, 100)

[node name="GPUParticles4" type="GPUParticles2D" parent="."]
light_mask = 0
emitting = false
amount = 40
process_material = ExtResource("4_7v5du")
texture = ExtResource("3_jmdw6")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(-50, -50, 100, 100)

[node name="AudioFire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_e8n32")
